# INC_Emulation

./: .gitignore  DEBUG_NOTES.md  DEPLOYMENT_DONE.md  DESIGN_DOCUMENT.md  HOST_REDUCE_README.md  PROJECT_ARCHITECTURE.md  RDMA理解.txt  REDUCE_IMPLEMENTATION.md  SWITCH_REFACTOR_PLAN.md  SWITCH_WORKFLOW.md  build_and_transport.sh  int_to_hex  int_to_hex.c  manual_test.sh  mode1_128m_test.sh  mode1_broadcast_test.sh  mode1_hier_test.sh  mode1_perf_test.sh  mode1_reduce_perf_test.sh  mode1_reduce_test.sh  mode1_simple_test.sh  mode1_test.sh  network_topology.md  reduce_throughput_test.sh  simple_int_to_hex.c  stop_inc.sh  topology.yaml
docs/: mode1_connection_termination_design.md  topology.md
mpi_test/: Makefile  deploy.sh  hostfile  mpi_collective_test  mpi_collective_test.c  run_mpi_test.sh  soft_switch  soft_switch.c  start_switches.sh
repository/: CMakeLists.txt
repository/include/: api.h  controller.h  parameter.h  rule.h  util.h
repository/include/mode1/: hierarchical_ps.h  host_api.h  inc_engine.h  qp_manager.h  switch_mode.h
repository/non_termination_switch/: CMakeLists.txt  bench.sh  benchmark_20260205_234855.csv  benchmark_barrier.sh  benchmark_barrier_results.csv  benchmark_broadcast.sh  benchmark_progress.txt  benchmark_results.csv  benchmark_results.txt  benchmark_results_20260205_221806.txt  benchmark_results_20260206_130041.csv  check_drop_stats.sh  controller_comm.cpp  host_test.c  quick_bench.sh  run_benchmark.sh  switch_allreduce.c  switch_broadcast.c  switch_context.c  switch_reduce.c  test_barrier.sh  test_broadcast.sh  test_mode1.sh  test_multi_size.sh  test_reduce_multi_size.sh  test_single_1mb.sh  throughput_benchmark.sh  util.c
repository/non_termination_switch/include/: controller_comm.h  opcode.h  parameter.h  rule.h  switch_context.h  util.h
repository/src/: api.c  controller.cpp  host.c  host_allgather.c  host_barrier.c  host_barrier_test_v2.c  host_broadcast.c  host_broadcast_test_v2.c  host_multi_ops.c  host_reduce.c  host_reduce_test_v2.c  host_reducescatter.c  host_simple_test.c  host_simple_test_v2.c  non_termination_switch.c  rule.c  switch.c  test.c  topo_parser.cpp  util.c
repository/src/mode1/: CMakeLists.txt  hierarchical_ps.c  host_api.c  host_broadcast_test.c  host_reduce_test.c  host_test.c  inc_engine.c  qp_manager.c
repository/termination_switch/include/: controller_comm.h  switch_context.h
repository/termination_switch/src/: controller_comm.c  controller_comm.cpp  switch_context.c  switch_main.c  switch_main_mode1.c  test_context.c  test_controller.c
repository/termination_switch/src/include/: controller_comm.h  switch_context.h
